feat: complete main func w/ socket and emotions

--- a/src/socketest.html
+++ b/src/socketest.html
@@ -68,7 +68,7 @@
     const $events = document.getElementById('events');
 
     $(function () {
-      const socket = io('/', { path: '/socket.io' });
+      const socket = io('/', { path: '/socket.io', transports: ['websocket'] });
 
       $('form').submit(function (e) {
         e.preventDefault();
